--- a/package.json
+++ b/package.json
@@ -14,19 +14,23 @@
     "bcrypt": "^5.0.1",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "pify": "^5.0.0",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.2",
     "typeorm": "^0.2.31",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.17.11",
     "@types/jsonwebtoken": "^8.5.1",
+    "@types/moment": "^2.13.0",
     "@types/node": "^14.14.35",
     "@types/pify": "^5.0.0",
     "@types/uuid": "^8.3.0",
+    "@types/yup": "^0.29.11",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.2.3"
   }
