--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
+    "multer": "^1.4.2",
     "pify": "^5.0.0",
     "reflect-metadata": "^0.1.13",
     "sqlite3": "^5.0.2",
@@ -27,6 +28,7 @@
     "@types/express": "^4.17.11",
     "@types/jsonwebtoken": "^8.5.1",
     "@types/moment": "^2.13.0",
+    "@types/multer": "^1.4.5",
     "@types/node": "^14.14.35",
     "@types/pify": "^5.0.0",
     "@types/uuid": "^8.3.0",
